--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,8 @@ html {
 }
 
 p, ul, ol, dl {
-  font-size: 1.6rem;
-  line-height: 1.8rem;
+  font-size: 2rem;
+  line-height: 2.5rem;
   margin-bottom: 12px;
 }
 
@@ -16,58 +16,58 @@ article {
   margin-left: auto;
 }
 
-h1 {
+h1, h2, h3, h4 {
   font-family: 'Ubuntu', sans-serif;
+}
+
+h1 {
   font-size: 4.5rem;
   font-weight: bold;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 h2 {
-  font-family: 'Ubuntu', sans-serif;
   font-size: 3.5rem;
   font-weight: bold;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  margin-top: 20px;
+  margin-bottom: 10px;
 }
 
 h3 {
-  font-family: 'Ubuntu', sans-serif;
   font-size: 2rem;
   font-weight: bold;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 h4 {
-  font-family: 'Ubuntu', sans-serif;
   font-size: 1.5rem;
   font-weight: bold;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
-.byline {
+.byline, figcaption {
   font-family: 'Arial', sans-serif;
+  font-size: 1.5rem;
 }
 
 figcaption {
-  font-family: 'Arial', sans-serif;
-  font-size: 1.4rem;
   text-align: right;
-  padding-top: 5px;
-  padding-bottom: 10px;
+  margin-bottom: 10px;
 }
 
-span {
+.byline span {
   font-style: italic;
 }
 
 blockquote {
-  border-left: 4px gray solid;
+  border-left: 4px solid gray;
   padding-left: 20px;
   margin-left: 30px;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 ol {
@@ -75,8 +75,9 @@ ol {
 }
 
 .comments {
-  background-color: gray;
+  background-color: #CCC;
   padding: 12px;
   margin: auto;
+  margin-bottom: 10px !important;
   max-width: 620px;
 }
